fixed navbar and dashboard content overlapping issue

--- a/frontend/styles/dashboard.css
+++ b/frontend/styles/dashboard.css
@@ -1,10 +1,12 @@
 html,
 body {
+    /* 
+    align-items: center;
+    justify-content: center; */
     height: 100%;
     margin: 0;
-    overflow: auto;
-    align-items: center;
-    justify-content: center;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 body {
@@ -16,12 +18,12 @@ body {
 
 header {
     width: 100%;
+    height: 60px;
     background-color: rgba(255, 255, 255, 0.8);
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    top: 0;
-    left: 0;
-    z-index: 1000;
     position: sticky;
+    top: 0;
+    z-index: 1000;
 }
 
 nav {
@@ -79,20 +81,18 @@ nav a:hover {
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    margin-top: 20px;
+    padding-top: 60px;
+    padding: 20px;
 }
 
 .item {
+    width: 300px;
+    height: 300px;
+    margin: 20px;
+    display: flex;
     background: rgba(255, 255, 255, 0.9);
     border-radius: 10px;
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
-    width: 300px;
-    height: 300px;
-    padding: 20px;
-    text-align: center;
-    margin: 20px;
-    position: relative;
-    display: flex;
 }
 
 .content {
@@ -173,6 +173,30 @@ nav a:hover {
     height: 2px; /* Thickness of the plus sign */
     background-color: white; /* Color of the plus sign */
     position: absolute; /* Positioning for centering */
+}
+.overlay-form {
+    display: none; /* Hidden by default */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(69, 66, 66, 0.7);
+    justify-content: center;
+    align-items: center;
+}
+
+.modal {
+    background: white;
+    padding: 20px;
+    border-radius: 5px;
+    text-align: center;
+}
+
+.close {
+    cursor: pointer;
+    font-size: 24px;
+    float: right;
 }
 
 
